# python-fundamentals

01-primeros_pasos/: 01-hello_world.py  02-comments.py  03-variables.py  04-data_types.py
06-loops/: 11-mini-project.py
09-poo_b/: 05-object_instrospection.py  06-super.py  07-multiple_inheritance.py  09-abstract_class.py  10-interfaces.py  11-dunder_methods.py
10-errors_managment/: 01-errors.py
11-modules/: 01-modules.py  02-packages.py  03-__name__.py
11-modules/my_package/: __init__.py
12-virtual_environments/pipenv/: emoji_example.py
12-virtual_environments/poetry/: beauty.py  pyproject.toml
12-virtual_environments/virtualenv/: requirements.txt
13-files/: 01-file.py  02-read_write_append.py  03-file_path.py  04-file_errors.py  05-csv.py  06-json.py  07-logs.py  08-script.py  09-pdf.py  10-translate.py  datos.csv  logs.txt  message.txt  test.txt  translated_message.txt
13-files/fileFolder/: relative.txt
